assesment restructure
